Added Entities and Connection String

--- a/Role Based Authorization/appsettings.json
+++ b/Role Based Authorization/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "FreeTrained",
+    "ExpiraryMinutes": 3600,
+    "Key": "LaLaLand"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=MAHADIS-PC\\SQLEXPRESS; Database=RoleBasedAuthorization; Trusted_Connection=true; TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
